GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/Guide_assistance_dog__c.object-meta.xml
<CustomObject>
    <label>Guide &amp; assistance dog</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Guide &amp; assistance dog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guide &amp; assistance dogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>