GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guide &amp; assistance dogs</relationshipLabel>
    <relationshipName>Guide_assistance_dogs</relationshipName>
    <type>Lookup</type>
</CustomField>