GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Age_of_Dog__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Dog__c</fullName>
    <label>Age of Dog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>