GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Approval</fullName>
            </value>
            <value>
                <fullName>Renewal Approval</fullName>
            </value>
            <value>
                <fullName>Existing Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>