GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Assists_to_alleviate_the_effects_of_a_di__c.field-meta.xml
<CustomField>
    <fullName>Assists_to_alleviate_the_effects_of_a_di__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assists to alleviate the effects of a diagnosed disability including physical, sensory, or psychological disabilities, other than a vision or hearing impairment.</description>
    <inlineHelpText>Assists to alleviate the effects of a diagnosed disability including physical, sensory, or psychological disabilities, other than a vision or hearing impairment.</inlineHelpText>
    <label>Assists to alleviate Other disability</label>
    <type>Checkbox</type>
</CustomField>