GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Assists_to_alleviate_the_effects_of_a_he__c.field-meta.xml
<CustomField>
    <fullName>Assists_to_alleviate_the_effects_of_a_he__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assists to alleviate the effects of a hearing impairment</description>
    <label>Assists to alleviate hearing impairment</label>
    <type>Checkbox</type>
</CustomField>