GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Assists_to_alleviate_the_effects_of_a_vi__c.field-meta.xml
<CustomField>
    <fullName>Assists_to_alleviate_the_effects_of_a_vi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Assists to alleviate the effects of a vision impairment.</inlineHelpText>
    <label>Assists to alleviate visual impairment</label>
    <type>Checkbox</type>
</CustomField>