GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Breed_s_of_Dog__c.field-meta.xml
<CustomField>
    <fullName>Breed_s_of_Dog__c</fullName>
    <label>Breed(s) of Dog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>