GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/can_Stay__c.field-meta.xml
<CustomField>
    <fullName>can_Stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>can Stay</label>
    <type>Checkbox</type>
</CustomField>