GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Guide &amp; assistance dogs</relationshipLabel>
    <relationshipName>Guide_assistance_dogs</relationshipName>
    <type>Lookup</type>
</CustomField>