GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Comments_for_customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_customer__c</fullName>
    <label>Comments for customer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>