GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_email__c</fullName>
    <label>Contact email</label>
    <type>Email</type>
</CustomField>