GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_name__c</fullName>
    <label>Contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>