GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Contact_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Contact_phone_number__c</fullName>
    <label>Contact phone number</label>
    <type>Phone</type>
</CustomField>