GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Has_the_dog_been_declared_a_restricted_b__c.field-meta.xml
<CustomField>
    <fullName>Has_the_dog_been_declared_a_restricted_b__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted breed or declared dangerous</label>
    <type>Checkbox</type>
</CustomField>