GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Irrelevant_health__c.field-meta.xml
<CustomField>
    <fullName>Irrelevant_health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Irrelevant health</label>
    <type>Checkbox</type>
</CustomField>