GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Is_Dog_Microchipped__c.field-meta.xml
<CustomField>
    <fullName>Is_Dog_Microchipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dog Microchipped</label>
    <type>Checkbox</type>
</CustomField>