GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Is_the_dog_of_good_health_and_free_from__c.field-meta.xml
<CustomField>
    <fullName>Is_the_dog_of_good_health_and_free_from__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the dog of good health and free from infectious diseases</inlineHelpText>
    <label>Is the dog of good health</label>
    <type>Checkbox</type>
</CustomField>