GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Name_of_Dog__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Dog__c</fullName>
    <label>Name of Dog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>