GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Position_in_organisation__c.field-meta.xml
<CustomField>
    <fullName>Position_in_organisation__c</fullName>
    <label>Position in organisation</label>
    <type>TextArea</type>
</CustomField>