GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under review</fullName>
            </value>
            <value>
                <fullName>Needs corrections</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waiting for signature</fullName>
                <isActive>false</isActive>
                <label>Waiting for signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>