GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/The_task_s__c.field-meta.xml
<CustomField>
    <fullName>The_task_s__c</fullName>
    <inlineHelpText>Please identify the task(s) that the Assistance Dog has been trained to perform to assist you to alleviate the effects of your disability:</inlineHelpText>
    <label>The task(s) the Dog has been trained</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>