GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Training_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Training_Organisation__c</fullName>
    <inlineHelpText>Training Organisation or Individual Trainer’s name</inlineHelpText>
    <label>Training Organisation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>