GearsetPOC/force-app/main/default/objects/Guide_assistance_dog__c/fields/Website_address__c.field-meta.xml
<CustomField>
    <fullName>Website_address__c</fullName>
    <label>Website address</label>
    <type>Url</type>
</CustomField>